tests/cases/errors/unknown_env.tex
\begin{document}
\begin{unknown}
    contenuto
\end{unknown}
\end{document}
